add controller responding with mock data for integration purposes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ endpoints.health.time-to-live=60000
 endpoints.health.enabled=true
 endpoints.metrics.enabled=true
 
+spring.jackson.serialization.fail-on-empty-beans=false
