--- a/src/main/kubernetes/contract-verifier.yml
+++ b/src/main/kubernetes/contract-verifier.yml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: contract-verifier
     spec:
+      serviceAccountName: api-service-reader
       containers:
       - name: contract-verifier
         image: tools-registry.hltech.dev/contract-verifier:latest
@@ -26,10 +27,10 @@ spec:
         resources:
           requests:
             memory: 256Mi
-            cpu: 0.2
+            cpu: 0.3
           limits:
             memory: 512Mi
-            cpu: 1
+            cpu: 0.5
 ---
 apiVersion: v1
 kind: Service
