added missing property

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,5 @@ server.tomcat.accesslog.buffered=false
 server.tomcat.accesslog.directory=logs
 server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b "%{Referer}i" "%{User-Agent}i"
 server.tomcat.basedir=./log/contract-verifier/${HOSTNAME:HOST_NAME_NOT_DEFINED}
+
+pactbroker.url=http://pactbroker-web.tools.svc.cluster.local:80
