--- a/src/main/kubernetes/contract-verifier.yml
+++ b/src/main/kubernetes/contract-verifier.yml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   labels:
     app: contract-verifier
-  name: contract-verifier-deployment
+  name: contract-verifier
 spec:
   selector:
     matchLabels:
