--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ endpoints.health.enabled=true
 endpoints.metrics.enabled=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+logging.level.root=INFO
