--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ endpoints.metrics.enabled=true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 logging.level.root=INFO
+
+# database
+spring.datasource.url=jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.platform=h2
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=none
+
+liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
