add ability to store & retrieve environment composition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 logging.level.root=INFO
 
 # database
-spring.datasource.url=jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.platform=h2
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=<invalid_db_url>
 
 spring.jpa.hibernate.ddl-auto=none
 
