--- a/src/test/resources/application-test-integration.properties
+++ b/src/test/resources/application-test-integration.properties
@@ -1,1 +1,6 @@
 pactbroker.url=https://localhost:${wiremock.server.https-port}/
+
+spring.datasource.url=jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.platform=h2
+spring.datasource.username=sa
+spring.datasource.password=
