--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
+# embedded tomcat settings
 server.port=8090
-
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.prefix=contract-verifier.access
 server.tomcat.accesslog.request-attributes-enabled=true
@@ -9,3 +9,30 @@ server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b "%{Referer}i" "%{User-Age
 server.tomcat.basedir=./log/contract-verifier/${HOSTNAME:HOST_NAME_NOT_DEFINED}
 
 pactbroker.url=http://pactbroker-web.tools.svc.cluster.local:80
+
+
+#management
+management.port=8091
+management.security.enabled=false
+management.health.defaults.enabled=false
+endpoints.enabled=false
+endpoints.health.time-to-live=60000
+endpoints.health.enabled=true
+endpoints.metrics.enabled=true
+
+
+# jackson config
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
+# logging
+logging.level.root=INFO
+
+
+# database
+spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:postgresql://localhost:5432/judge_d
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=none
+liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
