--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,38 @@
-spring.profiles.active=dev
+# embedded tomcat settings
+server.port=8090
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.prefix=contract-verifier.access
+server.tomcat.accesslog.request-attributes-enabled=true
+server.tomcat.accesslog.buffered=false
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b "%{Referer}i" "%{User-Agent}i"
+server.tomcat.basedir=./log/contract-verifier/${HOSTNAME:HOST_NAME_NOT_DEFINED}
 
-#actuator
+pactbroker.url=${PACT_BROKER_URL}
+
+
 #management
 management.port=8091
 management.security.enabled=false
 management.health.defaults.enabled=false
-
-#management endpoints
 endpoints.enabled=false
 endpoints.health.time-to-live=60000
 endpoints.health.enabled=true
 endpoints.metrics.enabled=true
 
+
+# jackson config
 spring.jackson.serialization.fail-on-empty-beans=false
 
+
+# logging
 logging.level.root=INFO
 
+
 # database
-spring.datasource.url=<invalid_db_url>
-
+spring.datasource.initialization-mode=always
+spring.datasource.url=${DB_CONNECTION_STRING}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
-
 liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
