add skeleton module for judge-d-k8s-agent and judge-d-core

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <name>Judge-D</name>
 
     <modules>
+        <module>judge-d-core</module>
+        <module>judge-d-k8s-agent</module>
         <module>judge-d-server</module>
     </modules>
 
