add judge-d-agent classes (+ integration with K8s)

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <modules>
         <module>judge-d-core</module>
-        <module>judge-d-k8s-agent</module>
+        <module>judge-d-agent</module>
         <module>judge-d-server</module>
     </modules>
 
