--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -9,9 +9,9 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>judge-d-k8s-agent</artifactId>
+    <artifactId>judge-d-agent</artifactId>
     <packaging>jar</packaging>
-    <name>Judge-D-Kubernetes-Agent</name>
+    <name>Judge-D-Agent</name>
 
     <properties>
         <springBootVersion>1.5.9.RELEASE</springBootVersion>
@@ -41,15 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>io.github.openfeign</groupId>
