--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ jobs:
     - stage: build & publish docker image for server
       script:
       - mvn docker:build@build-docker -P docker-app -f ./judge-d-server/pom.xml
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - docker push hltech/judge-d
     - stage: build & publish docker image for agent
       script:
       - mvn docker:build@build-docker -P docker-app -f ./judge-d-agent/pom.xml
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - docker push hltech/judge-d-agent
