Fixed gitignore, it has also fixed problems with mvn-wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ atlassian-ide-plugin.xml
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+# Maven
+!maven-wrapper.jar
+
 # Java
 *.class
 
@@ -30,3 +33,6 @@ atlassian-ide-plugin.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# output
+**/target/*
