--- a/judge-d-agent/src/main/resources/application-dev.properties
+++ b/judge-d-agent/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ server.port=8190
 
 hltech.contracts.judge-d.baseUrl=http://localhost:8080/
 hltech.contracts.judge-d.environment=DEV
-hltech.contracts.judge-d.reuiredLabel=app
+hltech.contracts.judge-d.requiredLabel=app
