--- a/judge-d-agent/src/main/resources/application.properties
+++ b/judge-d-agent/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8080
 
 hltech.contracts.judge-d.baseUrl=${JUDGE_D_BASE_URL}
 hltech.contracts.judge-d.environment=${JUDGE_D_ENV}
-hltech.contracts.judge-d.reuiredLabel=app
+hltech.contracts.judge-d.requiredLabel=app
