--- a/judge-d-agent/src/test/resources/application-test-integration.properties
+++ b/judge-d-agent/src/test/resources/application-test-integration.properties
@@ -2,4 +2,4 @@ server.port=0
 
 hltech.contracts.judge-d.baseUrl=http://localhost:8080/
 hltech.contracts.judge-d.environment=test
-hltech.contracts.judge-d.reuiredLabel=app
+hltech.contracts.judge-d.requiredLabel=app
