added version & service labels, corrected port mappng, added db

--- a/judge-d-server/compose-dependencies.yml
+++ b/judge-d-server/compose-dependencies.yml
@@ -1,9 +1,13 @@
-postgres:
-  container_name: judge-d-postgres
-  image: postgres:9.5
-  ports:
-    - "5432:5432"
-  volumes:
-    - /var/lib/postgresql/data
-  environment:
-    - POSTGRES_PASSWORD=postgres
+version: '3.7'
+
+services:
+  postgres:
+    container_name: judge-d-postgres
+    image: postgres:9.5
+    ports:
+      - "5432:5432"
+    volumes:
+      - /var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=judge_d
