--- a/judge-d-agent/src/main/docker/Dockerfile
+++ b/judge-d-agent/src/main/docker/Dockerfile
@@ -7,4 +7,4 @@ ADD ./judge-d-agent-0.1-SNAPSHOT.jar /root/judge-d-agent.jar
 ADD ./entrypoint.sh /root/entrypoint.sh
 RUN chmod +x /root/entrypoint.sh
 
-ENTRYPOINT ["/root/entrypoint.sh"]
+CMD ["/root/entrypoint.sh"]
