--- a/judge-d-server/src/main/docker/Dockerfile
+++ b/judge-d-server/src/main/docker/Dockerfile
@@ -5,4 +5,4 @@ ADD ./judge-d-server-0.1-SNAPSHOT.jar /root/judge-d.jar
 ADD ./entrypoint.sh /root/entrypoint.sh
 RUN chmod +x /root/entrypoint.sh
 
-ENTRYPOINT ["/root/entrypoint.sh"]
+CMD ["/root/entrypoint.sh"]
