--- a/judge-d-server/src/main/resources/application.properties
+++ b/judge-d-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # embedded tomcat settings
-server.port=8080
+server.port=${PORT}
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.prefix=contract-verifier.access
 server.tomcat.accesslog.request-attributes-enabled=true
