Migrating judge-d to spring boot 2.1.1.RELEASE and increased version of liquibase

--- a/judge-d-server/src/main/resources/application.properties
+++ b/judge-d-server/src/main/resources/application.properties
@@ -12,13 +12,12 @@ pactbroker.url=${PACT_BROKER_URL}
 
 
 #management
-management.port=8091
-management.security.enabled=false
+management.server.port=8091
 management.health.defaults.enabled=false
-endpoints.enabled=false
-endpoints.health.time-to-live=60000
-endpoints.health.enabled=true
-endpoints.metrics.enabled=true
+management.endpoints.enabled-by-default=false
+management.endpoint.health.cache.time-to-live=60000
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
 
 
 # jackson config
@@ -35,4 +34,4 @@ spring.datasource.url=${DB_CONNECTION_STRING}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
-liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
