--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -14,7 +14,7 @@
     <name>Judge-D-Agent</name>
 
     <properties>
-        <springBootVersion>1.5.9.RELEASE</springBootVersion>
+        <springBootVersion>2.1.1.RELEASE</springBootVersion>
         <swaggerVersion>2.7.0</swaggerVersion>
         <pactGenVersion>1.3.3</pactGenVersion>
     </properties>
@@ -51,13 +51,18 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-core</artifactId>
-            <version>1.4.4.RELEASE</version>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-hystrix</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-context</artifactId>
-            <version>1.3.3.RELEASE</version>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
@@ -67,6 +72,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.7</version>
         </dependency>
 
         <!--TEST-->
@@ -106,6 +116,7 @@
             <groupId>com.hltech</groupId>
             <artifactId>pact-gen</artifactId>
             <version>${pactGenVersion}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
