--- a/judge-d-server/pom.xml
+++ b/judge-d-server/pom.xml
@@ -14,7 +14,7 @@
     <name>Judge-D-server</name>
 
     <properties>
-        <springBootVersion>1.5.9.RELEASE</springBootVersion>
+        <springBootVersion>2.1.1.RELEASE</springBootVersion>
         <swaggerVersion>2.7.0</swaggerVersion>
     </properties>
 
@@ -53,10 +53,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
@@ -70,13 +66,13 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-core</artifactId>
-            <version>1.4.4.RELEASE</version>
+            <artifactId>spring-cloud-netflix-hystrix</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-context</artifactId>
-            <version>1.3.3.RELEASE</version>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
@@ -86,7 +82,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.4.1</version>
+            <version>3.6.2</version>
         </dependency>
 
         <dependency>
@@ -132,6 +128,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.1.3.RELEASE</version>
         </dependency>
 
         <!--TEST-->
