--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -65,6 +65,11 @@
             <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
             <version>3.1.10</version>
