dev profile configured to use h2 database for persistence

--- a/judge-d-server/src/main/resources/application-dev.properties
+++ b/judge-d-server/src/main/resources/application-dev.properties
@@ -31,8 +31,8 @@ logging.level.root=INFO
 
 # database
 spring.datasource.initialization-mode=always
-spring.datasource.url=jdbc:postgresql://localhost:5432/judge_d
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:h2:mem:testdb  
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=false  
 spring.jpa.hibernate.ddl-auto=none
 liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
