--- a/judge-d-server/pom.xml
+++ b/judge-d-server/pom.xml
@@ -134,6 +134,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jsonSchema</artifactId>
+            <version>2.9.8</version>
+        </dependency>
 
         <!--TEST-->
         <dependency>
