actuators endpoint configuration limited to metrics, info, health

--- a/judge-d-server/src/main/resources/application.properties
+++ b/judge-d-server/src/main/resources/application.properties
@@ -10,15 +10,17 @@ server.tomcat.basedir=./log/contract-verifier/${HOSTNAME:HOST_NAME_NOT_DEFINED}
 
 pactbroker.url=${PACT_BROKER_URL}
 
-
 #management
 management.server.port=8091
+management.endpoints.security.enabled=false
 management.health.defaults.enabled=false
 management.endpoints.enabled-by-default=false
 management.endpoint.health.cache.time-to-live=60000
+management.endpoints.web.exposure.include=metrics,health,info
+management.endpoint.info.enabled=true
 management.endpoint.health.enabled=true
 management.endpoint.metrics.enabled=true
-
+management.endpoints.web.base-path=/
 
 # jackson config
 spring.jackson.serialization.fail-on-empty-beans=false
