Vaunt version increased + temporarily switched coveralls of (their maintenance blocks releases)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ jobs:
   include:
     - stage: build with maven & generate reporrts
       script:
-      - mvn clean verify jacoco:report coveralls:report
+#      - mvn clean verify jacoco:report coveralls:report
+       - mvn clean install
     - stage: build & publish docker image for server
       if: branch = master
       script:
