--- a/judge-d-agent/src/main/resources/application.properties
+++ b/judge-d-agent/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8080
 hltech.contracts.judge-d.baseUrl=${JUDGE_D_BASE_URL}
 hltech.contracts.judge-d.environment=${JUDGE_D_ENV}
 hltech.contracts.judge-d.requiredLabel=app
+
+hltech.contracts.judge-d.excluded-namespaces=${EXCLUDED_NAMESPACES}
+hltech.contracts.judge-d.included-namespaces=${INCLUDED_NAMESPACES}
