--- a/judge-d-agent/src/test/resources/application-test.properties
+++ b/judge-d-agent/src/test/resources/application-test.properties
@@ -3,3 +3,6 @@ server.port=0
 hltech.contracts.judge-d.baseUrl=http://localhost:8080/
 hltech.contracts.judge-d.environment=test
 hltech.contracts.judge-d.requiredLabel=app
+
+hltech.contracts.judge-d.excluded-namespaces=
+hltech.contracts.judge-d.included-namespaces=
