--- a/judge-d-server/pom.xml
+++ b/judge-d-server/pom.xml
@@ -241,6 +241,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.hltech</groupId>
+                <artifactId>judge-d-contract-publisher-maven-plugin</artifactId>
+                <version>0.3.0</version>
+                <configuration>
+                    <judgeDLocation>https://judge-d.herokuapp.com</judgeDLocation>
+                    <capabilities>
+                        <param>rest</param>
+                    </capabilities>
+                    <swaggerLocation>${project.basedir}/target/swagger</swaggerLocation>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
