add support for spaces in agent

--- a/judge-d-agent/src/main/resources/application.properties
+++ b/judge-d-agent/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8080
 
 hltech.contracts.judge-d.baseUrl=${JUDGE_D_BASE_URL}
 hltech.contracts.judge-d.environment=${JUDGE_D_ENV}
+hltech.contracts.judge-d.space=${JUDGE_D_SPACE:}
 hltech.contracts.judge-d.requiredLabel=app
 
 hltech.contracts.judge-d.excluded-namespaces=${EXCLUDED_NAMESPACES:}
