--- a/judge-d-agent/src/main/resources/application.properties
+++ b/judge-d-agent/src/main/resources/application.properties
@@ -7,3 +7,5 @@ hltech.contracts.judge-d.requiredLabel=app
 
 hltech.contracts.judge-d.excluded-namespaces=${EXCLUDED_NAMESPACES:}
 hltech.contracts.judge-d.included-namespaces=${INCLUDED_NAMESPACES:}
+
+hltech.contracts.judge-d.consul-host=${CONSUL_HOST}
