--- a/judge-d-agent/src/main/resources/application-dev.properties
+++ b/judge-d-agent/src/main/resources/application-dev.properties
@@ -3,3 +3,5 @@ server.port=8190
 hltech.contracts.judge-d.baseUrl=http://localhost:8080/
 hltech.contracts.judge-d.environment=DEV
 hltech.contracts.judge-d.requiredLabel=app
+
+hltech.contracts.judge-d.consul-host=localhost:8500
