--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <groovyAllVersion>2.4.7</groovyAllVersion>
-        <lombokVersion>1.16.18</lombokVersion>
+        <lombokVersion>1.18.12</lombokVersion>
         <spockVersion>1.1-groovy-2.4</spockVersion>
     </properties>
 
@@ -67,7 +67,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.1</version>
+                    <version>0.8.5</version>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
@@ -82,8 +82,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.6.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <release>11</release>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
@@ -147,6 +146,14 @@
                     <configuration>
                         <repoToken>${COVERALLS_REPO_KEY}</repoToken>
                     </configuration>
+                    <dependencies>
+                        <!--REQUIRED BY COVERALLS WITH JAVA 9+-->
+                        <dependency>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.2.3</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
