--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>judge-d</artifactId>
-    <groupId>com.hltech.contrats</groupId>
+    <groupId>com.hltech.judged</groupId>
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
