--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -153,7 +153,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${springBootVersion}</version>
                 <configuration>
-                    <mainClass>com.hltech.contracts.judged.agent.App</mainClass>
+                    <mainClass>com.hltech.judged.agent.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
