Added Archunit rules

--- a/judge-d-server/pom.xml
+++ b/judge-d-server/pom.xml
@@ -146,6 +146,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit</artifactId>
+            <version>0.14.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit</artifactId>
+            <version>0.8.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.hltech</groupId>
             <artifactId>vaunt-validator</artifactId>
             <version>1.0.28</version>
