Implements #155 enables CORS for capabilities endpoint with contracts.cross.origin property

--- a/judge-d-server/src/main/resources/application.properties
+++ b/judge-d-server/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+#endpoint settings
+contracts.cross.origin=http://localhost
