--- a/judge-d-server/src/main/resources/application-dev.properties
+++ b/judge-d-server/src/main/resources/application-dev.properties
@@ -21,8 +21,11 @@ logging.level.root=INFO
 
 # database
 spring.datasource.initialization-mode=always
-spring.datasource.url=jdbc:h2:mem:testdb  
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=false  
+spring.h2.console.enabled=false
 spring.jpa.hibernate.ddl-auto=none
-liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+#endpoint settings
+contracts.cross.origin=http://localhost
