--- a/judge-d-agent/src/test/resources/application-test.properties
+++ b/judge-d-agent/src/test/resources/application-test.properties
@@ -1,4 +1,5 @@
 server.port=0
+management.server.port=0
 
 hltech.contracts.judge-d.baseUrl=http://localhost:8080/
 hltech.contracts.judge-d.environment=test
