Properties for scheduled update introduced and used in tests

--- a/judge-d-agent/src/main/resources/application.properties
+++ b/judge-d-agent/src/main/resources/application.properties
@@ -9,3 +9,6 @@ hltech.contracts.judge-d.excluded-namespaces=${EXCLUDED_NAMESPACES:}
 hltech.contracts.judge-d.included-namespaces=${INCLUDED_NAMESPACES:}
 
 hltech.contracts.judge-d.consul-host=${CONSUL_HOST}
+
+hltech.contracts.judge-d.updateServices.fixedDelay=5000
+hltech.contracts.judge-d.updateServices.initialDelay=10000
