--- a/judge-d-agent/src/test/resources/application-test.properties
+++ b/judge-d-agent/src/test/resources/application-test.properties
@@ -7,3 +7,6 @@ hltech.contracts.judge-d.requiredLabel=app
 
 hltech.contracts.judge-d.excluded-namespaces=
 hltech.contracts.judge-d.included-namespaces=
+
+hltech.contracts.judge-d.updateServices.fixedDelay=2000
+hltech.contracts.judge-d.updateServices.initialDelay=4000
