--- a/judge-d-agent/src/test/resources/application-test.properties
+++ b/judge-d-agent/src/test/resources/application-test.properties
@@ -10,3 +10,5 @@ hltech.contracts.judge-d.included-namespaces=
 
 hltech.contracts.judge-d.updateServices.fixedDelay=2000
 hltech.contracts.judge-d.updateServices.initialDelay=4000
+
+hltech.contracts.judge-d.consul-host=http://localhost
