--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -95,7 +95,9 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
+            <version>${groovyAllVersion}</version>
             <scope>test</scope>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
