--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <groovyAllVersion>2.4.12</groovyAllVersion>
+        <groovyAllVersion>2.5.14</groovyAllVersion>
         <lombokVersion>1.18.12</lombokVersion>
-        <spockVersion>1.1-groovy-2.4</spockVersion>
+        <spockVersion>1.3-groovy-2.5</spockVersion>
         <version.number>1.${git.total.commit.count}.0_${git.commit.id.abbrev}</version.number>
         <springBootVersion>2.1.1.RELEASE</springBootVersion>
     </properties>
@@ -57,7 +57,14 @@
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>${groovyAllVersion}</version>
+                <type>pom</type>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy-testng</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
